<resources>
    <string name="app_name">VirtualLife</string>
    <string name="loading">Loading...</string>

    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="email.hint">email@example.org</string>
    <string name="password.hint">Password</string>
    <string name="or">or</string>
    <string name="email.test">Not valid email address</string>

    <!-- Overrides FormEditText -->
    <string name="error_field_must_not_be_empty">The field most NOT be empty</string>
</resources>
