<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email.hint"
            app:testType="email"
            app:testErrorString="@string/email.test"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password.hint"
            android:inputType="textWebPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/signInEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/natural"
        android:gravity="center_vertical"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".5"
            android:background="@color/login.separator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/or" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".5"
            android:background="@color/login.separator" />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInGoogleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/loginStatusTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />


    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:visibility="visible" />
    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:visibility="visible" />

</LinearLayout>